--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,15 @@ dependencies = [
     "mcp>=1.10.1",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
+    "pytest>=8.4.1",
+    "pytest-mock>=3.14.1",
+    "pytest-cov>=6.2.1",
+    "pytest-xdist>=3.8.0",
 ]
 
 [dependency-groups]
 dev = [
+    "pytest>=8.4.1",
+    "pytest-mock>=3.14.1",
     "ruff>=0.12.1",
 ]
