--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pytest-mock>=3.14.1",
     "pytest-cov>=6.2.1",
     "pytest-xdist>=3.8.0",
+    "questionary>=2.1.0",
 ]
 
 [dependency-groups]
